{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 17,
  "lineage": "4b96465f-ae97-6ddd-dbee-896822576775",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ec6517f6edbf8044",
            "arn": "arn:aws:ec2:us-west-1:115757259045:instance/i-057fc1393c63b44ff",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057fc1393c63b44ff",
            "instance_state": "running",
            "instance_type": "c5a.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "tEtFrfmYuhXDdqYX",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0f59ae4c6567e9fda"
              }
            ],
            "primary_network_interface_id": "eni-0f59ae4c6567e9fda",
            "private_dns": "ip-10-0-1-100.us-west-1.compute.internal",
            "private_ip": "10.0.1.100",
            "public_dns": "ec2-54-219-178-40.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.178.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c230c4f2e20e156",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06180b82d258ade75",
            "tags": {
              "Name": "sequencecomparisson"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0be1df105d0037082"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_network_interface.main",
            "aws_subnet.main_subnet",
            "aws_vpc.main",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:115757259045:internet-gateway/igw-015086c3cac678964",
            "id": "igw-015086c3cac678964",
            "owner_id": "115757259045",
            "tags": {
              "Name": "Internet gateway terraform"
            },
            "vpc_id": "vpc-001dede55ba362a9c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "Public_NACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:115757259045:network-acl/acl-026a01390f1a9750d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "all",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-026a01390f1a9750d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "all",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "115757259045",
            "subnet_ids": [
              "subnet-06180b82d258ade75"
            ],
            "tags": {
              "Name": "Public NACL"
            },
            "vpc_id": "vpc-001dede55ba362a9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.main_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0f59ae4c6567e9fda",
            "ipv6_address_count": 0,
            "mac_address": "02:9f:b9:0a:58:ed",
            "private_dns_name": "ip-10-0-1-100.us-west-1.compute.internal",
            "private_ip": "10.0.1.100",
            "private_ips": [
              "10.0.1.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0be1df105d0037082"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06180b82d258ade75",
            "tags": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.main_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-015086c3cac678964",
            "id": "r-rtb-037e83702b1ca089f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-037e83702b1ca089f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.Public_RT",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-037e83702b1ca089f",
            "owner_id": "115757259045",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public Route table"
            },
            "vpc_id": "vpc-001dede55ba362a9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0071c997c6ed94ec8",
            "route_table_id": "rtb-037e83702b1ca089f",
            "subnet_id": "subnet-06180b82d258ade75"
          },
          "dependencies": [
            "aws_route_table.Public_RT",
            "aws_subnet.main_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:115757259045:security-group/sg-03b73f94eb008b2c1",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b73f94eb008b2c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "115757259045",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-001dede55ba362a9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:115757259045:security-group/sg-058abe61115e5b04e",
            "description": "Allow ssh inbound traffic",
            "egress": [],
            "id": "sg-058abe61115e5b04e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "115757259045",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-001dede55ba362a9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:115757259045:subnet/subnet-06180b82d258ade75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06180b82d258ade75",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "115757259045",
            "tags": {
              "Name": "tf-subnet"
            },
            "tags_all": {
              "Name": "tf-subnet"
            },
            "vpc_id": "vpc-001dede55ba362a9c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:115757259045:vpc/vpc-001dede55ba362a9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-022b9d5904de825ee",
            "default_route_table_id": "rtb-021c0d5151fbcbfe7",
            "default_security_group_id": "sg-0be1df105d0037082",
            "dhcp_options_id": "dopt-3ecc0058",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-001dede55ba362a9c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-021c0d5151fbcbfe7",
            "owner_id": "115757259045"
          }
        }
      ]
    }
  ]
}